@@ -42,7 +42,7 @@ import java.util.LinkedHashMap;
 
 /**
  * This class works like a singleton, the instance is initialized by jEdit.
- * 
+ *
  * @author Matthieu Casanova
  * @version $Id: Buffer.java 8190 2006-12-07 07:58:34Z kpouer $
  * @since jEdit 4.3pre10
@@ -52,7 +52,7 @@ public class ModeProvider
 	public static ModeProvider instance = new ModeProvider();
 
 	private LinkedHashMap<String, Mode> modes = new LinkedHashMap<String, Mode>(180);
-	
+
 	// any mode that is added that is already in the 'modes' map is added here. These
 	// 'override' modes are modes loaded from outside of the standard issue catalog files.
 	private LinkedHashMap<String, Mode> overrideModes = new LinkedHashMap<String, Mode>(20);
@@ -73,7 +73,7 @@ public class ModeProvider
 	public Mode getMode(String name)
 	{
 		Mode mode = overrideModes.get(name);
-		if (mode == null) 
+		if (mode == null)
 		{
 			mode = modes.get(name);
 		}
@@ -90,16 +90,32 @@ public class ModeProvider
 	 */
 	public Mode getModeForFile(String filename, String firstLine)
 	{
-		String nogzName = filename.substring(0,filename.length() -
-			(filename.endsWith(".gz") ? 3 : 0));
+		return getModeForFile(null, filename, firstLine);
+	} //}}}
+
+	//{{{ getModeForFile() method
+	/**
+	 * Get the appropriate mode that must be used for the file
+	 * @param filepath the filepath, can be {@code null}
+	 * @param filename the filename, can be {@code null}
+	 * @param firstLine the first line of the file
+	 * @return the edit mode, or null if no mode match the file
+	 * @since jEdit 4.5pre1
+	 */
+	public Mode getModeForFile(String filepath, String filename, String firstLine)
+	{
+		if ((filepath != null) && filepath.endsWith(".gz"))
+			filepath = filepath.substring(0, filepath.length() - 3);
+		if ((filename != null) && filename.endsWith(".gz"))
+			filename = filename.substring(0, filename.length() - 3);
 
 		List<Mode> acceptable = new ArrayList<Mode>();
-		
+
 		// First check overrideModes as these are user supplied modes.
 		// User modes have priority.
 		for(Mode mode : overrideModes.values())
 		{
-			if(mode.accept(nogzName,firstLine))
+			if(mode.accept(filepath, filename, firstLine))
 			{
 				acceptable.add(mode);
 			}
@@ -109,57 +125,57 @@ public class ModeProvider
 			// no user modes were acceptable, so check standard modes.
 			for(Mode mode : modes.values())
 			{
-				if(mode.accept(nogzName,firstLine))
+				if(mode.accept(filepath, filename, firstLine))
 				{
 					acceptable.add(mode);
 				}
 			}
 		}
-		if (acceptable.size() == 1) 
+		if (acceptable.size() == 1)
 		{
-			return acceptable.get(0);	
+			return acceptable.get(0);
 		}
-		if (acceptable.size() > 1) 
+		if (acceptable.size() > 1)
 		{
 			Collections.reverse(acceptable);
-			
+
 			// the very most acceptable mode is one whose file
 			// name doesn't only match the file name as regular
 			// expression but which is identical
 			for (Mode mode : acceptable)
 			{
-				if (mode.acceptFilenameIdentical(filename)) 
+				if (mode.acceptIdentical(filepath, filename))
 				{
-					return mode;	
+					return mode;
 				}
 			}
 
 			// most acceptable is a mode that matches both the
-			// filename and the first line glob
-			for (Mode mode : acceptable) 
+			// filepath and the first line glob
+			for (Mode mode : acceptable)
 			{
-				if (mode.acceptFilename(filename) && 
-					mode.acceptFirstLine(firstLine)) 
+				if (mode.acceptFile(filepath, filename) &&
+					mode.acceptFirstLine(firstLine))
 				{
-					return mode;	
+					return mode;
 				}
 			}
-			// next best is filename match
-			for (Mode mode : acceptable) 
+			// next best is filepath match
+			for (Mode mode : acceptable)
 			{
-				if (mode.acceptFilename(filename)) {
-					return mode;	
+				if (mode.acceptFile(filepath, filename)) {
+					return mode;
 				}
 			}
 			// all acceptable choices are by first line glob, and
 			// they all match, so just return the first one.
-			return acceptable.get(0);	
+			return acceptable.get(0);
 		}
 		// no matching mode found for this file
 		return null;
 	} //}}}
 
-	
+
 	//{{{ getModes() method
 	/**
 	 * Returns an array of installed edit modes.
@@ -185,14 +201,14 @@ public class ModeProvider
 	 */
 	public void addMode(Mode mode)
 	{
-		if (modes.get(mode.getName()) != null) 
+		if (modes.get(mode.getName()) != null)
 		{
-			overrideModes.put(mode.getName(), mode);	
+			overrideModes.put(mode.getName(), mode);
 			modes.remove(mode.getName());
 		}
-		else 
+		else
 		{
-			modes.put(mode.getName(), mode);	
+			modes.put(mode.getName(), mode);
 		}
 	} //}}}
 
